--- a/Fsharp-WebAPI.fsproj
+++ b/Fsharp-WebAPI.fsproj
@@ -11,4 +11,8 @@
     <Compile Include="Program.fs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="8.0.100" />
+  </ItemGroup>
+
 </Project>
