--- a/Fsharp-WebAPI.fsproj
+++ b/Fsharp-WebAPI.fsproj
@@ -12,6 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FSharpLint" Version="0.2.8" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Update="FSharp.Core" Version="8.0.100" />
   </ItemGroup>
 
