--- a/.github/workflows/component-detection.yml
+++ b/.github/workflows/component-detection.yml
@@ -10,8 +10,9 @@ permissions:
 
 jobs:
   dependency-submission:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v3
+      - run: nuget restore .\Fsharp-WebAPI.sln
       - name: Component detection 
         uses: advanced-security/component-detection-dependency-submission-action@v0.0.2
